<resources>
    <string name="facebook_app_id">876296992517837</string>
    <string name="fb_login_protocol_scheme">fb876296992517837</string>
    <string name="google_client_id">328783804062-m45nqe2mh32m4u9tq9jc5vu27nn9vqba.apps.googleusercontent.com</string>
    <string name="app_name">Buy Anywhere</string>
    <string name="title_activity_maps">Map</string>
    <string name="log_out">Đăng xuất</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_failed">Đăng nhập thất bại</string>
    <string name="facebook_login_button">Log in with Facebook</string>
    <string name="google_login_button">Sign in with Google</string>
    <string name="upload_failed">Upload thất bại</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="profile">Tài Khoản</string>
    <string name="product">Sản Phẩm</string>
    <string name="location_search">Vị Trí</string>
    <string name="shopping_cart">Giỏ Hàng</string>
    <string name="quantity">Số lượng:</string>
    <string name="unexpected_error_message">Có lỗi xảy ra, vui lòng thử lại</string>
    <string name="rating_count">lượt đánh giá</string>
    <string name="product_description">Mô tả sản phẩm</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="orderDate">Ngày đăng:</string>
    <string name="add_product_success">Đã thêm sản phẩm vào giỏ hàng</string>
    <string name="remove_product_success">Đã xóa sản phẩm khỏi giỏ hàng</string>
    <string name="purchase">Đặt Hàng</string>
    <string name="rating">Đánh giá sản phẩm</string>
    <string name="write_your_review">Viết nhận xét</string>
    <string name="rating_dialog_title">Đánh giá sản phẩm</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="send_feedback">Gửi nhận xét</string>
    <string name="very_pleased">Rất hài lòng</string>
    <string name="good">Hài lòng</string>
    <string name="common">Bình thường</string>
    <string name="unpleased">Không hài lòng</string>
    <string name="very_unpleased">Rất không hài lòng</string>
    <string name="feedback_sent">Đã gửi nhận xét</string>
    <string name="rating_required">Đánh giá số sao</string>
    <string name="shop">Cửa Hàng</string>

    <string name="account">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="error_account">Nhập email</string>
    <string name="account_not_exist">Tài khoản không hợp lệ</string>
    <string name="error_password">Nhập mật khẩu</string>
    <string name="full_name">Họ và Tên</string>
    <string name="empty_name">Nhập họ và tên</string>
    <string name="password_not_match">Mật khẩu xác nhận không đúng</string>
    <string name="not_have_account">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="check_box_remember_content">Ghi nhớ</string>
    <string name="check_box_auto_sign_in_content">Tự động đăng nhập</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="phone">Di động</string>
    <string name="phone_required">Di động*</string>
    <string name="email">Email</string>
    <string name="favorite">Yêu thích</string>
    <string name="address">Địa chỉ</string>
    <string name="address_required">Địa chỉ*</string>
    <string name="retry">Thử lại</string>
    <string name="an_error_occured">Có lỗi xảy ra</string>
    <string name="register_shop">Đăng ký shop</string>
    <string name="name">Họ và tên*</string>
    <string name="submit">Ghi nhận</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="field_required">Thông tin bắt buộc</string>
    <string name="gender">Giới tính</string>
    <string name="or">hoặc</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="none">Không</string>
    <string name="product_categories">Danh mục sản phẩm</string>
    <string name="confirm">Xác nhận</string>
    <string name="upload_success">Upload thành công</string>
    <string name="select_an_image">Chọn một ảnh</string>
    <string name="shop_name">Tên shop*</string>
    <string name="shop_address">Địa chỉ</string>
    <string name="contact">Điện thoại liên lạc*</string>
    <string name="shop_register">Đăng ký shop</string>
    <string name="shop_unregistered">Shop chưa được đăng ký</string>
    <string name="register_now">Đăng ký ngay</string>
    <string name="shop_description">Thông tin shop</string>
    <string name="facebook">Facebook</string>
    <string name="edit_shop">Chỉnh sửa thông tin shop</string>
    <string name="product_name">Tên sản phẩm*</string>
    <string name="product_origin_price">Giá gốc*</string>
    <string name="off_price">Giảm giá còn</string>
    <string name="percent">Phần trăm</string>
    <string name="select_category">Chọn danh mục*</string>
    <string name="post_product">Đăng sản phẩm</string>
    <string name="register_failed">Đăng ký thất bại, vui long thử lại</string>
    <string name="website">Website</string>
    <string name="no_description">Không có mô tả</string>
    <string name="upload_task_not_done">Tác vụ upload chưa hoàn thành</string>
    <string name="delete_failed">Xóa thất bại</string>
    <string name="item_deleting">Sản phẩm đang được xóa</string>
    <string name="invalid_price">Gía gốc phải lớn hơn giá giảm</string>
    <string name="processing">Đang xử lí</string>
    <string name="quantity_positive">Số lượng tối thiểu là 1</string>
    <string name="price_is_equal_or_more_than_1000">Giá tối thiểu là 1000 VND</string>
    <string name="quantity_required">Số lượng*</string>
    <string name="vnd">VND</string>
    <string name="to_shop">Đến cửa hàng</string>
    <string name="input_key">Nhập tên sản phẩm</string>
    <string name="action_filter">Bộ lọc</string>
    <string name="action_sort">Sắp xếp</string>
    <string name="search">Tìm kiếm</string>
    <string name="feedback">Nhận xét</string>
    <string name="view_more">Xem thêm</string>
    <string name="not_have">Chưa có</string>
    <string name="all">Tất cả</string>
    <string name="ship">Đặt hàng</string>
    <string name="ship_complete">Giao hàng</string>
    <string name="order_failure">Đặt hàng thất bại, vui lòng thử lại</string>
    <string name="order_success">Đặt hàng thành công</string>
    <string name="order_dialog">Đặt hàng</string>
    <string name="shipped">Đã giao hàng</string>
    <string name="dial">Liên hệ</string>
    <string name="click_to_choose_address">Click để chọn một địa điểm</string>
    <string name="auto_locate_failed">Tự động định vị thất bại</string>
    <string name="locating">Đang định vị...</string>
    <string name="pick_address_required">Chưa chọn địa chỉ</string>
    <string name="pick_address">Chọn địa điểm</string>
    <string name="input_address">Nhập tên địa điểm</string>
    <string name="gps_title">GPS</string>
    <string name="gps_message">Định vị vị trí chưa được bật, bạn có muốn bật?</string>
    <string name="shopOrder">Lịch sử mua hàng</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="help">Trợ giúp</string>
    <string name="searching">Đang tìm kiếm...</string>
    <string name="distance">Khoảng cách</string>
    <string name="delete_cart">Xóa khỏi giỏ hàng</string>
    <string name="sure_to_delete">Chắc chắn muốn xóa sản phẩm khỏi giỏ hàng</string>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>