<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_drawer_product"
            android:icon="@drawable/ic_shopping"
            android:title="@string/product" />

        <item
            android:id="@+id/navigation_drawer_location"
            android:icon="@drawable/ic_location"
            android:title="@string/location_search" />

        <item
            android:id="@+id/navigation_drawer_order"
            android:icon="@drawable/ic_shipped"
            android:title="@string/shopOrder" />

        <item
            android:id="@+id/navigation_drawer_shopping_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/shopping_cart" />

        <item
            android:id="@+id/navigation_drawer_shop"
            android:icon="@drawable/ic_shop_large"
            android:title="@string/shop" />

        <item
            android:id="@+id/navigation_drawer_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />

        <item
            android:id="@+id/navigation_drawer_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_drawer_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />

        <item
            android:id="@+id/navigation_drawer_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
    </group>
</menu>