<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_shopping"
        android:title="@string/product" />

    <!--<item-->
        <!--android:id="@+id/navigation_location"-->
        <!--android:icon="@drawable/ic_location"-->
        <!--android:title="@string/location_search" />-->

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/shopping_cart" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop_large"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />
</menu>
