<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:padding="25dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_logo"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/AuthTextInputStyle">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/primary_text_font" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/AuthTextInputStyle">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/primary_text_font" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="16dp"
                android:text="@string/check_box_remember_content"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/check_box_auto_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="left"
                android:layout_marginBottom="16dp"
                android:text="@string/check_box_auto_sign_in_content"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/not_have_account"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/or"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="@string/facebook_login_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_font_size" />
    </LinearLayout>
</ScrollView>