<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_logo"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/AuthTextInputStyle">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/primary_text_font" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/AuthTextInputStyle">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/primary_text_font" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/AuthTextInputStyle">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/primary_text_font" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintTextAppearance="@style/AuthTextInputStyle">

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/primary_text_font" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sign_in_button_background"
            android:text="@string/register_account"
            android:textColor="@android:color/white" />


    </LinearLayout>

</ScrollView>
