<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/tool_bar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:src="@drawable/ic_product_green" />

        <com.uides.buyanywhere.custom_view.ClearableEditText
            android:id="@+id/txt_input_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_product"
            android:layout_toEndOf="@id/img_product"
            android:hint="@string/product_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/extra_large_text_font"
            app:clearDrawable="@drawable/button_delete_drawable"
            app:isRequired="true" />

        <ImageView
            android:id="@+id/img_tags"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_below="@id/img_product"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:src="@drawable/ic_tags" />

        <TextView
            android:id="@+id/txt_spinner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_tags"
            android:layout_toEndOf="@id/img_tags"
            android:text="@string/select_category"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_categories"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/txt_spinner_title"
            android:layout_toEndOf="@id/img_tags" />

        <ImageView
            android:id="@+id/img_quantity"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_below="@id/img_tags"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:src="@drawable/ic_quantity" />

        <com.uides.buyanywhere.custom_view.ClearableEditText
            android:id="@+id/txt_input_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_quantity"
            android:layout_toEndOf="@id/img_quantity"
            android:hint="@string/quantity_required"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/extra_large_text_font"
            app:clearDrawable="@drawable/button_delete_drawable"
            app:isRequired="true" />

        <ImageView
            android:id="@+id/img_origin_price"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_below="@id/img_quantity"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:src="@drawable/ic_price_green" />

        <com.uides.buyanywhere.custom_view.ClearableEditText
            android:id="@+id/txt_input_origin_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_origin_price"
            android:layout_toEndOf="@id/img_origin_price"
            android:layout_toStartOf="@id/txt_origin_vnd"
            android:hint="@string/product_origin_price"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/extra_large_text_font"
            app:clearDrawable="@drawable/button_delete_drawable"
            app:isRequired="true" />

        <TextView
            android:id="@+id/txt_origin_vnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txt_input_origin_price"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/txt_input_origin_price"
            android:layout_marginStart="6dp"
            android:gravity="center_vertical"
            android:text="@string/vnd"
            android:textSize="@dimen/ultra_large_text_font" />

        <ImageView
            android:id="@+id/img_off_price"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_below="@id/img_origin_price"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:src="@drawable/ic_off_price" />

        <com.uides.buyanywhere.custom_view.ClearableEditText
            android:id="@+id/txt_input_off_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_off_price"
            android:layout_toEndOf="@id/img_off_price"
            android:layout_toStartOf="@id/txt_off_vnd"
            android:hint="@string/off_price"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/extra_large_text_font"
            app:clearDrawable="@drawable/button_delete_drawable" />

        <TextView
            android:id="@+id/txt_off_vnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txt_input_off_price"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/txt_input_off_price"
            android:layout_marginStart="6dp"
            android:gravity="center_vertical"
            android:text="@string/vnd"
            android:textSize="@dimen/ultra_large_text_font" />

        <ImageView
            android:id="@+id/img_camera"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_below="@id/img_off_price"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginTop="@dimen/icon_margin_top"
            android:src="@drawable/ic_camera_green" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_thumbnail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_camera"
            android:layout_below="@id/img_off_price"
            android:layout_toEndOf="@id/img_camera" />

        <com.uides.buyanywhere.custom_view.ClearableEditText
            android:id="@+id/txt_input_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/img_facebook"
            android:layout_below="@id/recycler_view_thumbnail_image"
            android:layout_marginTop="@dimen/medium_icon_size"
            android:hint="@string/product_description"
            android:lines="5"
            android:textColor="@android:color/black"
            android:textSize="@dimen/extra_large_text_font"
            app:clearDrawable="@drawable/button_delete_drawable" />
    </RelativeLayout>

</ScrollView>